--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,8 @@
-.wrapper-component{
+.wrapper-component {
   border: 1px solid red;
   border-radius: 10px;
   text-align: center;
   width: 600px;
   padding: 20px 0px;
 }
+/*# sourceMappingURL=app.component.css.map */
